--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
@@ -123,7 +123,7 @@
           <span wc-help-chevron-text help-text-key="fk7263.helptext.diagnos.ytterligare"></span>
 
           <div class="bottom-padding-small clearfix">
-            <input type="text" id="diagnoseDescriptionOpt1" name="diagnose.descriptionOpt1" class="block col-xs-12 form-control maxwidth" value=""
+            <input type="text" id="diagnoseDescriptionOpt1" name="diagnose.descriptionOpt1" class="col-xs-12 form-control maxwidth" value=""
                    ng-class="{'fielderror' : viewState.getValidationErrors('diagnosbeskrivning2')}"
                    ng-model="model.diagnosBeskrivning2"
                    ng-change="onChangeDiagnoseDescription2()"
@@ -178,7 +178,7 @@
         </div>
         <div class='col-xs-9'>
           <div class="controls">
-            <input type="text" id="diagnoseDescriptionOpt2" name="diagnose.descriptionOpt2" class="block col-xs-12 form-control maxwidth" value=""
+            <input type="text" id="diagnoseDescriptionOpt2" name="diagnose.descriptionOpt2" class="col-xs-12 form-control maxwidth" value=""
                    ng-class="{'fielderror' : viewState.getValidationErrors('diagnosbeskrivning3')}"
                    ng-model="model.diagnosBeskrivning3"
                    ng-change="onChangeDiagnoseDescription3()"
