--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8b.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8b.html
@@ -60,7 +60,7 @@
             <wc-field-validation class="indent"
                                  field-type="date"
                                  validations="viewState.getValidationErrors('nedsattmed25')"></wc-field-validation>
-            <div class="indent pad10" ng-if="field8b.nedsattMed25.workState">
+            <div class="indent" ng-if="field8b.nedsattMed25.workState">
               <div class="workHoursPerWeek" ng-show="model.tjanstgoringstid != '' && model.tjanstgoringstid > 0">
                 Arbetstid timmar/vecka: <strong id="arbetstid25">{{model.tjanstgoringstid * 0.75 |
                 number}}</strong>
@@ -114,7 +114,7 @@
             <wc-field-validation class="indent"
                                  field-type="date"
                                  validations="viewState.getValidationErrors('nedsattmed50')"></wc-field-validation>
-            <div class="indent pad10" ng-if="field8b.nedsattMed50.workState">
+            <div class="indent" ng-if="field8b.nedsattMed50.workState">
               <div class="workHoursPerWeek" ng-show="model.tjanstgoringstid != '' && model.tjanstgoringstid > 0">
                 Arbetstid timmar/vecka: <strong id="arbetstid50">{{model.tjanstgoringstid * 0.5 |
                 number}}</strong>
@@ -166,7 +166,7 @@
             <wc-field-validation class="indent"
                                  field-type="date"
                                  validations="viewState.getValidationErrors('nedsattmed75')"></wc-field-validation>
-            <div class="indent pad10" ng-if="field8b.nedsattMed75.workState">
+            <div class="indent" ng-if="field8b.nedsattMed75.workState">
               <div class="workHoursPerWeek" ng-show="model.tjanstgoringstid != '' && model.tjanstgoringstid > 0">
                 Arbetstid timmar/vecka: <strong id="arbetstid75">{{model.tjanstgoringstid * 0.25 |
                 number}}</strong>
