--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/utkast.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/utkast.html
@@ -78,7 +78,7 @@
           </div>
           <!-- certificate -->
 
-          <div wc-utkast-error-summary view-state="viewState"></div>
+          <wc-utkast-error-summary view-state="viewState"></wc-utkast-error-summary>
           <div ui-view="footer"></div>
 
         </div>
