--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/utkast.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/utkast.html
@@ -86,7 +86,7 @@
               </div>
               <!-- certificate -->
 
-              <div wc-utkast-error-summary-fk view-state="viewState"></div>
+              <wc-utkast-error-summary-fk view-state="viewState"></wc-utkast-error-summary-fk>
               <div ui-view="footer"></div>
 
             </div>
