--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.scss
@@ -1,4 +1,33 @@
 .sjukskrivningar {
+
+  @media (min-width: 1200px) {
+    .col-lg-auto {
+      width: auto;
+    }
+
+    .col-lg-pull-none {
+      float: none !important;
+    }
+    .col-lg-no-padding-right {
+      padding-right: 0;
+    }
+  }
+
+  @media (min-width: 1340px) {
+    .col-vlg-auto {
+      width: auto;
+    }
+    .col-vlg-pull-right {
+      float: right;
+    }
+    .invisible-vlg {
+      display: none !important;
+    }
+    textarea.form-control {
+      max-width: 1000px;
+    }
+  }
+
   .hoursPerWeek {
     width: 50px;
   }
@@ -11,6 +40,9 @@
     line-height: 32px;
     vertical-align: bottom;
     margin-bottom: 0;
+    input[type=checkbox].big-checkbox {
+      margin-top: 5px;
+    }
   }
 
   .sjukskrivningar_period {
