--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -1,4 +1,4 @@
-@CHARSET 'UTF-8';
+@CHARSET "UTF-8";
 /*!
  * Copyright (C) 2017 Inera AB (http://www.inera.se)
  *
@@ -20,61 +20,7 @@
 
 @media screen {
   // Import partials
-  @import "components/variables";
-
-  //colors
-  $color_java_approx: #28b4c4;
-  $white: #fff;
-  $mine_shaft: #323232;
-  $color_blue_chill_approx: #008391;
-  $color_scarpa_flow_approx: #595c66;
-  $color_gallery_approx: #f0f0f0;
-  $color_black_haze_approx: #f6f6f6;
-  $color_apple_approx: #42a341;
-  $color_scooter_approx: #38c4d4;
-  $color_pelorous_approx: #31b2be;
-  $color_cape_cod_approx: #3f3f3f;
-  $color_storm_dust_approx: #656565;
-  $black_30: rgba(0, 0, 0, 0.3);
-  $color_mountain_mist_approx: #999;
-  $color_quill_gray_approx: #d4d4d4;
-  $color_alto_approx: #ddd;
-  $black_20: rgba(0, 0, 0, 0.2);
-  $color_mine_shaft_approx: #333;
-  $color_alabaster_approx: #f9f9f9;
-  $color_radical_red_approx: #ff4565;
-  $color_pesto_approx: #8a6d3b;
-  $color_apple_blossom_approx: #a94442;
-  $color_calypso_approx: #306e8d;
-  $color_morning_glory_approx: #9cd7e3;
-  $color_radical_red_approx: #ff4565;
-  $color_fountain_blue_approx: #64abc0;
-  $black_075: rgba(0,0,0,.075);
-  $red_60: rgba(255,0,0,0.6);
-  $blaze_orange: #ff6600;
-  $web_orangered: orangered;
-  $color_celeste_approx: #ccc;
-  $color_picton_blue_60_approx: rgba(82, 168, 236, 0.6);
-  $color_wild_sand_approx: #f5f5f5;
-  $color_orient_approx: rgb(0, 104, 125);
-  $color_steel_gray_approx: #212633;
-  $concrete: #f2f2f2;
-  $mercury: #e5e5e5;
-  $mine_shaft: #323232;
-  $color_gallery_approx: #f0f0f0;
-  $color_storm_dust_approx-2: #666;
-
-  //urls
-  $url-back-link-icon: url('/img/back-link-icon.gif');
-  $url-settings-icon: url('/img/settings_ikon.png');
-  $url-settings-hoover: url('/img/settings_hoover.png');
-  $url-col-shadow: url('/img/col-shadow.png');
-
-  //fonts
-  $font-0: Helvetica Neue;
-  $font-1: helvetica;
-  $font-2: arial;
-  $font-3: sans-serif;
+  @import "css/variables";
 
   // injector
   @import '../app-shared/unified-view/components/_variables.scss';
@@ -92,27 +38,29 @@
   @import '../app-shared/unified-view/components/uvSkapadAv/uvSkapadAv.directive.scss';
   @import '../app-shared/unified-view/components/uvTable/uvTable.directive.scss';
   @import '../app-shared/unified-view/components/uvTillaggsfragor/uvTillaggsfragor.directive.scss';
-  @import 'components/_bootstrap-overrides.scss';
-  @import 'components/_fk-sit-common.scss';
-  @import 'components/_komplettering-dialog.scss';
-  @import 'components/_wc-header-care-unit-dialog.scss';
-  @import 'components/_wc-header.scss';
-  @import 'components/_wc-table-head.scss';
-  @import 'components/_wc-uv-override.scss';
-  @import 'components/_wc-vardenhet-selector.scss';
+  @import 'css/_legacy-to-be-removed.scss';
+  @import 'css/_wc-uv-override.scss';
   @import 'date/wcDatePickerField.directive.scss';
   @import 'fk/arenden/_arende.scss';
+  @import 'fk/arenden/komplettera/komplettering-modal-dialog.scss';
+  @import 'fk/arenden/panel/fraga/arendePanelFraga.directive.scss';
   @import 'fmb/_fmb.scss';
   @import 'fmb/wcHelpWrapper.scss';
+  @import 'gui/animations/fold.scss';
+  @import 'gui/animations/keyframe-animations.scss';
+  @import 'gui/formly/checkMultiText.formly.scss';
   @import 'gui/formly/diagnos.scss';
   @import 'gui/formly/dodsorsakMulti.scss';
   @import 'gui/formly/dodsorsakRow.scss';
   @import 'gui/formly/dodsorsakTerminalFoljd.scss';
+  @import 'gui/formly/multiText.formly.scss';
   @import 'gui/formly/prognos.scss';
   @import 'gui/formly/sjukskrivningar.scss';
   @import 'gui/formly/underlag.scss';
   @import 'gui/formly/vagueDate.scss';
   @import 'gui/formly/wrapper/wcFraga.scss';
+  @import 'gui/headers/wcHeader.partial.scss';
+  @import 'gui/headers/wcHeaderCareUnitDialog.template.scss';
   @import 'gui/wcFormLabel.scss';
   @import 'gui/wcFragaKomplettering.directive.scss';
   @import 'gui/wcHelpChevron.directive.scss';
@@ -123,6 +71,8 @@
   @import 'gui/wcIntygRelatedRevokedMessage.directive.scss';
   @import 'gui/wcNewPersonIdMessage.scss';
   @import 'gui/wcPatientInfoChangeMessage.scss';
+  @import 'gui/wcSekretessAvliden.directive.scss';
+  @import 'gui/wcTableHead.directive.scss';
   @import 'gui/wcVardPersonSekretess/wcVardPersonSekretess.directive.scss';
   @import 'intyg/read-only-view/wcIntygReadOnlyView.scss';
   @import 'intyg/unified-view/uvPatientGrund/uvPatientGrund.scss';
@@ -131,6 +81,10 @@
   @import 'intyg/unified-view/wcInlineKomplettering.directive.scss';
   @import 'srs/_srs.scss';
   @import 'srs/components/wcSrsDiagnoseInfo/wcSrsDiagnoseInfo.directive.scss';
+  @import 'utkast/utkast-header/utkastHeader.scss';
+  @import 'utkast/wcFieldSingle.directive.scss';
+  @import 'utkast/wcUtkastErrorSummary.directive.scss';
+  @import 'utkast/wcUtkastErrorSummaryFK.directive.scss';
   // endinjector
 
   %font-common {
@@ -156,6 +110,10 @@
       background-color: $color_java_approx;
     }
   }
+
+
+
+
 
   .page-title, .h1 {
     font-weight: bold;
