--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/_arende.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/_arende.scss
@@ -30,16 +30,11 @@ $arende-block-head-color: #000;
 arende list item animation
  */
 %fadein {
-  -webkit-animation: fadeIn 1s;
-  -moz-animation: fadeIn 1s;
-  -ms-animation: fadeIn 1s;
   animation: fadeIn 1s;
+  transition-duration: 1s;
 }
 
 .arende-item {
-  -webkit-transition: color 0.6s, background-color 0.3s, all 0.6s;
-  -moz-transition: color 0.6s, background-color 0.3s, all 0.6s;
-  -ms-transition: color 0.6s, background-color 0.3s, all 0.6s;
   transition: color 0.6s, background-color 0.3s, all 0.6s;
   &.ng-enter {
     @extend %fadein;
@@ -48,9 +43,7 @@ arende list item animation
     @extend %fadein;
   }
   &.ng-leave {
-    -webkit-animation: fadeOut 1s;
-    -moz-animation: fadeOut 1s;
-    -ms-animation: fadeOut 1s;
+    @extend %fadein;
     animation: fadeOut 1s;
   }
 }
@@ -67,8 +60,6 @@ arende list item animation
 
 .arende-panel {
   background-color: $arende-panel-background-color;
-  -webkit-border-radius: 8px 8px 8px 8px;
-  -moz-border-radius: 8px 8px 8px 8px;
   border-radius: 8px 8px 8px 8px;
   padding: 20px;
   max-width: 600px;
@@ -92,8 +83,6 @@ arende list item animation
 .arende-block {
   background-color: $arende-block-background-color;
   border: 1px solid $arende-block-border-color;
-  -webkit-border-radius: 8px 8px 8px 8px;
-  -moz-border-radius: 8px 8px 8px 8px;
   border-radius: 8px 8px 8px 8px;
 }
 
@@ -116,8 +105,6 @@ arende list item animation
   display: block;
   padding: 10px 20px;
   border-bottom: 1px solid $arende-block-border-color;
-  -webkit-border-radius: 8px 8px 0 0;
-  -moz-border-radius: 8px 8px 0 0;
   border-radius: 8px 8px 0 0;
   h3 {
     font-size: 13px;
