INTYG-5180: rättar casing på direktiv.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -65,7 +65,7 @@
   @import 'intyg/unified-view/uvPatientGrund/uvPatientGrund.scss';
   @import 'intyg/unified-view/uvSignedBy/uvSignedBy.scss';
   @import 'intyg/unified-view/uvWcFraga/uvWcFraga.directive.scss';
-  @import 'intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive';
+  @import 'intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.scss';
   @import 'utkast/fmb/_fmb.scss';
   @import 'utkast/fmb/wcHelpWrapper.scss';
   @import 'utkast/formly/checkMultiText.formly.scss';
