INTYG-5153: Nya direktiv för wc-header, mesta ac css på plats, men med hårdkodad dummy-texter

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader.partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader.partial.html
@@ -1,3 +1,7 @@
+
+<wc-header></wc-header>
+<!--
+
 <div class="wc-header">
   <div class="header clearfix">
     <div class="headerbox">
@@ -54,7 +58,6 @@
           </li>
         </ul>
       </div>
-      <!-- /.navbar-collapse -->
     </div>
   </div>
   <div ui-view="headerExtra">
@@ -62,3 +65,4 @@
   </div>
   <div ui-view="dialogs"></div>
 </div>
+-->
