--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -42,6 +42,10 @@
   @import 'components/animations/keyframe-animations.scss';
   @import 'components/date/wcDatePickerField/wcDatePickerField.directive.scss';
   @import 'components/headers/wcHeader.partial.scss';
+  @import 'components/headers/wcHeader/wcHeader.directive.scss';
+  @import 'components/headers/wcHeader/wcHeaderHelp/wcHeaderHelp.directive.scss';
+  @import 'components/headers/wcHeader/wcHeaderUnit/wcHeaderUnit.directive.scss';
+  @import 'components/headers/wcHeader/wcHeaderUser/wcHeaderUser.directive.scss';
   @import 'components/headers/wcHeaderCareUnitDialog.template.scss';
   @import 'components/wcFormLabel/wcFormLabel.scss';
   @import 'components/wcFragaKomplettering/wcFragaKomplettering.directive.scss';
