--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader/wcHeaderUnit/wcHeaderUnit.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader/wcHeaderUnit/wcHeaderUnit.directive.html
@@ -13,7 +13,7 @@
 
 
   <button type="button" id="expand-unitmenu-btn" class="btn btn-link" ng-click="toggleMenu($event)">
-    <i class="header-chevron glyphicon" ng-class="{'glyphicon-chevron-down' :!menu.expanded, 'glyphicon-chevron-up': menu.expanded}"></i>
+    <i class="header-chevron glyphicon" ng-class="{'glyphicon-menu-down' :!menu.expanded, 'glyphicon-menu-up': menu.expanded}"></i>
   </button>
 
 
