--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader/wcHeaderUser/wcHeaderUser.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader/wcHeaderUser/wcHeaderUser.directive.scss
@@ -14,4 +14,13 @@ wc-header-user {
     font-weight: bold;
   }
 
+  .glyphicon.sekretess-markering {
+    color: $wc-color-18;
+  }
+
+  a.sekretess-markering {
+    color: $wc-color-18;
+    font-weight: bold;
+  }
+
 }
