--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader/wcHeaderUser/wcHeaderUser.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader/wcHeaderUser/wcHeaderUser.directive.scss
@@ -2,11 +2,11 @@ $wc-header-user-max-width: 400px;
 
 wc-header-user {
   // should shrink a litte more aggressivly than the wc-unit
-  flex: 2 2 auto;
-  min-width: 0;
-
+  flex: 2 1 auto;
+  min-width: 160px;
   max-width: $wc-header-user-max-width;
   height: 100%;
+
   //base text color for this component
   color: $wc-color-20;
 
