INTYG-5153: Brutit ut menyn till eget direktiv wc-main-menu

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader/wcHeader.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader/wcHeader.directive.scss
@@ -73,6 +73,7 @@ wc-header {
 
   //Override bootstraps default dropdown for this context
   .dropdown-menu {
+    min-width:0;
     position: relative;
     left: 0;
     bottom: 0;
