--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader/wcHeaderHelp/wcHeaderHelp.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader/wcHeaderHelp/wcHeaderHelp.directive.html
@@ -20,7 +20,7 @@
 <!-- this menu cant be relatively positioned, as it should not grow the width of the menu -->
 <div uib-dropdown is-open="menu.expanded" class="hidden-md hidden-lg">
   <ul uib-dropdown-menu>
-    <li><a href="" id="aboutLink" ng-click="onAboutClick()">Om Webcert</a></li>
-    <li ng-if="showLogout()"><a href="" id="logoutLink" ng-click="onLogoutClick()">Logga ut</a></li>
+    <li><a href="" id="aboutLink_dropdown" ng-click="onAboutClick()">Om Webcert</a></li>
+    <li ng-if="showLogout()"><a href="" id="logoutLink_dropdown" ng-click="onLogoutClick()">Logga ut</a></li>
   </ul>
 </div>
