--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.scss
@@ -65,7 +65,7 @@ wc-header-help {
     right: 0;
     top: 80px;
   }
-  //Override wc-header style for this particular dropdown
+  //Override wc-app-header style for this particular dropdown
   .dropdown-menu {
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.32);
   }
