INTYG-5153: Lagt till stöd för att ha max 1440 centrerat content

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcAppHeader.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcAppHeader.directive.scss
@@ -6,7 +6,12 @@ $wc-header-icon-size: 36px;
 
 
 wc-app-header {
-  // The entire header is a flex container
+
+  // center the entire directive, and constrain the max width
+  max-width: $wc-max-content-width;
+  margin: auto;
+
+  // Should be a flex container
   display: flex;
   align-items: center;
   background-color: $wc-color-17;
