--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader.partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader.partial.html
@@ -1,6 +1,9 @@
-
-<wc-app-header></wc-app-header>
-<wc-main-menu></wc-main-menu>
+<div class="wc-app-header-wrapper">
+  <wc-app-header></wc-app-header>
+</div>
+<div class="wc-main-menu-wrapper">
+  <wc-main-menu></wc-main-menu>
+</div>
 <!--
 
 <div class="wc-header">
