--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcMainMenu/wcMainMenu.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcMainMenu/wcMainMenu.directive.scss
@@ -1,7 +1,9 @@
-$navbar-border-top-color: #999;
-$navbar-border-bottom-color: #d4d4d4;
-$nav-border-color: #ddd;
-$navbar-collapse-border-left-color: #ddd;
+//TODO: Se över hela scss upplägget för denna komponent, ev är det bättre att overrida alla .navbar klasser mha bootstrap varabel override ist för här.
+
+$navbar-border-bottom-color: $wc-color-22;
+$nav-border-color: $wc-color-23;
+$navbar-collapse-border-left-color: $wc-color-23;
+
 $stat-circle-background-color: #999;
 $stat-circle-color: #fff;
 $stat-circle-active-color: #fff;
@@ -9,20 +11,29 @@ $stat-circle-active-background-color: #ff4565;
 $stat-circle-active-border-color: #ff4565;
 
 wc-main-menu {
+  display: flex;
+  align-items: center;
+
+  // center the entire directive, and constrain the max width
+  max-width: $wc-max-content-width;
+  margin: auto;
+
   .navbar {
+    flex: 1;
     margin: 0;
     min-height: 0;
     padding: 0;
     border-radius: 0;
     border: 0;
-    border-top: 1px solid $navbar-border-top-color;
-    border-bottom: 1px solid $navbar-border-bottom-color;
+
     .divider-vertical {
       margin: 0;
     }
     .nav {
       margin: 0;
       white-space: nowrap;
+      border-top: 0;
+      border-bottom: 1px solid $navbar-border-bottom-color;
       > li {
         border-right: 1px solid $nav-border-color;
         /*  display: inline-block; */
@@ -38,10 +49,12 @@ wc-main-menu {
     }
   }
 
+  .navbar-collapse {
+    padding: 0;
+  }
   .navbar-collapse.in .nav > li {
     border-left: 1px solid $navbar-collapse-border-left-color;
-    margin-right: 15px;
-    margin-left: 15px;
+
   }
 
   .badge__stat {
@@ -71,20 +84,20 @@ wc-main-menu {
   }
 
   .glyph-background {
-    position:relative;
-    border-radius:50%;
-    color:#f00;
-    z-index:2;
+    position: relative;
+    border-radius: 50%;
+    color: #f00;
+    z-index: 2;
   }
 
   .inner {
-    position:absolute;
-    top:2px;
-    left:2px;
-    right:2px;
-    bottom:2px;
-    border-radius:50%;
-    background-color:#fff;
-    z-index:-1;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    right: 2px;
+    bottom: 2px;
+    border-radius: 50%;
+    background-color: #fff;
+    z-index: -1;
   }
 }
