--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader.partial.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader.partial.scss
@@ -2,7 +2,7 @@
   background-color: $wc-color-17;
 }
 .wc-main-menu-wrapper {
-  //TODO: not sure about which color
+  //TODO: update when menu design has been specified
   background-color: $wc-color-20;
 }
 
