--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcMainMenu/wcMainMenu.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcMainMenu/wcMainMenu.directive.scss
@@ -26,6 +26,10 @@ wc-main-menu {
     border-radius: 0;
     border: 0;
 
+    &.navbar-default {
+      background-color: $wc-color-20;
+    }
+
     .divider-vertical {
       margin: 0;
     }
