--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcAppHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcAppHeader.directive.html
@@ -4,12 +4,12 @@
 </div>
 
 
-<wc-header-user ng-if="!hideUserSection()" user-model="userModel"></wc-header-user>
+<wc-header-user ng-if="!hideUserSection()"></wc-header-user>
 
 
-<wc-header-unit ng-if="!hideUnitSection()" user-model="userModel"></wc-header-unit>
+<wc-header-unit ng-if="!hideUnitSection()"></wc-header-unit>
 
 
-<wc-header-help user-model="userModel"></wc-header-help>
+<wc-header-help user="user"></wc-header-help>
 
 
