--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcHeaderUnit.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcHeaderUnit.directive.html
@@ -4,11 +4,19 @@
 
    <div class="vertical-container">
     <div class="single-text-row-container">
-      <span class="text-nowrap vg-name">{{userModel.valdVardgivare.namn}}</span>
-      <span class="greedy-flex-shrink truncate-when-needed ve-name" ng-if="showEnhetName()">&nbsp;- {{userModel.valdVardenhet.namn}}</span>
+      <span class="text-nowrap vg-name">{{user.valdVardgivare.namn}}</span>
+      <span class="greedy-flex-shrink truncate-when-needed ve-name" ng-if="showEnhetName()">&nbsp;- {{user.valdVardenhet.namn}}</span>
     </div>
-    <div class="status-row truncate-when-needed" id="otherLocations" ng-if="otherLocationsStatsCount() > 0">
-      <b>{{otherLocationsStatsCount()}}</b> ej hanterade frågor och ej signerade utkast på andra vårdenheter.
+    <div class="status-row truncate-when-needed" id="otherLocations">
+
+      <div ng-if="showStatsStatus()">
+          <b>{{otherLocationsStatsCount()}}</b> ej hanterade frågor och ej signerade utkast på andra vårdenheter.
+      </div>
+
+      <div ng-if="showInactiveUnitStatus()">
+        OBS! Enheten är markerad som inaktiv i journalsystemet.
+      </div>
+
     </div>
    </div>
 
