--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
@@ -42,6 +42,9 @@ $wc-color-20: #F2F2F2;
 $wc-color-21: #496CEC;
 $wc-color-22: #9A9A9A;
 $wc-color-23: #A9B2BD;
+$wc-color-24: #F5F6F7;
+$wc-color-25: #8AA7F5;
+
 
 // Width constraints ---------
 
